crates/data-dict/tests/snapshots/validate_spec__s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s07-wrong-rep-on-enum.yaml\")"
---
Error: [S07] An `enum` column must list its categories with `values`.
    ╭─[ spec/s07-wrong-rep-on-enum.yaml:10:15 ]
    │
 10 │       - name: status
    │               ───┬──  
    │                  ╰──── `t.status` has type `enum` but has no `values`
────╯

Error: [S07] An `enum` column must use `values`, not `range`.
    ╭─[ spec/s07-wrong-rep-on-enum.yaml:10:15 ]
    │
 10 │       - name: status
    │               ───┬──  
    │                  ╰──── `t.status` has type `enum` but uses `range`
────╯
